<resources>
    <string name="app_name">Electricity Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_about">About</string>
    <string name="action_rateapp">Rate this App</string>
    <string name="privacy_activity_title">Privacy Policy</string>

    <string name="main_consumption">Electricity Consumption</string>
    <string name="main_details">Details</string>
    <string name="main_list_name">Name</string>
    <string name="main_list_days">Days</string>
    <string name="main_list_quantity">Quantity</string>
    <string name="main_list_watts">Watts</string>
    <string name="main_list_time">Time</string>
    <string name="additem_hint_name">Name</string>
    <string name="additem_hint_days">Days per month</string>
    <string name="additem_hint_time">Daily usage time</string>
    <string name="additem_hint_watts">Watts</string>
    <string name="additem_hint_quantity">Quantity</string>
    <string name="additem_error_field_empty">Field required</string>
    <string name="additem_error_days">Number must be less than 30</string>
    <string name="additem_time_picker">Select time</string>
    <string name="additem_pick_sample">Select\n an item</string>
    <string name="additem_activity_title">Add Item</string>
    <string name="samples_dialog_title">Select an item</string>
    <string name="chart_others">Others</string>
    <string name="about_author">Developer:</string>
    <string name="about_developer">Cuauhtémoc Calvario</string>
    <string name="about_title">About</string>
    <string name="about_email">ccalvariozavala@gmail.com</string>
    <string name="main_ad_unit">ca-app-pub-5965660713221392/9617719310</string>
    <string name="additem_ad_unit">ca-app-pub-5965660713221392/7560625514</string>
    <string name="chart_ad_unit">ca-app-pub-5965660713221392/3238237120</string>
    <string name="rates_ad_unit">ca-app-pub-5965660713221392/4299015196</string>
    <string name="chart_interstitial_ad_unit">ca-app-pub-5965660713221392/8752421940</string>
    <string name="chart_interstitial_ad_unit_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="main_ad_unit_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="textview_settings_rate_type">Rate type</string>
    <string name="textview_settings_fixed_rate">Fixed rate cost</string>
    <string name="textview_settings_set_rates">Set rates</string>
    <string name="rates_name">Name</string>
    <string name="rates_kwh">kWh</string>
    <string name="rates_cost">Cost</string>
    <string name="rates_activity_title">Rates</string>

    <string name="addrate_activity_title">Add Tier</string>
    <string name="addrate_title">Tier</string>
    <string name="addrate_kwh">kWh</string>
    <string name="addrate_cost">Cost</string>
    <string name="addrate_error_field_empty">Field required</string>
    <string name="addrate_help">Leave kWh empty if it is the last tier.</string>

    <string name="key_rate_type">key_rate_plan</string>
    <string name="key_fixed_rate">key_fixed_rate</string>
    <string name="key_set_rates">key_set_rates</string>

    <string name="settings_title_rates">Rates</string>
    <string name="settings_title_general">General</string>
    <string name="settings_title_about">About</string>
    <string name="settings_about_version">Version</string>
    <string name="settings_fixed_rate">Fixed Rate</string>
    <string name="settings_tiered_rate">Tiered Rate</string>

    <string name="samples_tv">TV</string>
    <string name="samples_tv_24">TV x LED 24\"</string>
    <string name="samples_tv_32">TV x LED 32\"</string>
    <string name="samples_tv_50">TV x LED 50\"</string>
    <string name="samples_light">Lights</string>
    <string name="samples_led_bulb">LED Bulb</string>
    <string name="samples_incandescent">Incandescent Bulb</string>
    <string name="samples_fan">Fan</string>
    <string name="samples_small_fan">Small Fan</string>
    <string name="samples_med_fan">Medium Fan</string>
    <string name="samples_big_fan">Big Fan</string>
    <string name="samples_ac">Air Conditioner</string>
    <string name="samples_kitchen">Kitchen</string>
    <string name="samples_refrigerator">Refrigerator (24 hr avg)</string>
    <string name="samples_microwave">Microwave</string>
    <string name="samples_blender">Blender</string>
    <string name="samples_coffemaker">Coffee maker</string>
    <string name="samples_stove">Stove</string>
    <string name="samples_dishwasher">Dishwasher</string>
    <string name="samples_home">Home</string>
    <string name="samples_washing_machine">Washing machine</string>
    <string name="samples_dryer">Clothes Dryer</string>
    <string name="samples_hair_dryer">Hair dryer</string>
    <string name="samples_vacuum">Vacuum</string>
    <string name="samples_phone">Phone</string>
    <string name="samples_computer">Computer</string>
    <string name="samples_desktop_computer">Desktop Computer</string>
    <string name="samples_gaming_computer">Gaming Computer</string>
    <string name="samples_laptop">Laptop</string>

    <string name="info_set_rates_dialog_title">Info</string>
    <string name="info_set_rates">Set rates in Settings menu to see an approximate of how much you will pay.</string>
</resources>
