<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textview_about_developedby"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/textview_about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/app_name"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/imageview_about"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="Version:"
            android:textColor="@color/colorLabelItemText"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageview_about"
            app:layout_constraintTop_toBottomOf="@+id/textview_about_title" />

        <ImageView
            android:id="@+id/imageview_about"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

    </android.support.constraint.ConstraintLayout>


    <TextView
        android:id="@+id/textview_about_developedby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/about_author"
        app:layout_constraintBottom_toTopOf="@+id/texview_about_developer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_about_title" />

    <TextView
        android:id="@+id/texview_about_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/about_developer"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_about_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_about_developedby" />

    <TextView
        android:id="@+id/textview_about_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/about_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texview_about_developer" />


</android.support.constraint.ConstraintLayout>